RESOLVED FIXED124872
Remote Layer Tree: Hook up setLayerTreeStateIsFrozen
https://bugs.webkit.org/show_bug.cgi?id=124872
Summary Remote Layer Tree: Hook up setLayerTreeStateIsFrozen
Tim Horton
Reported 2013-11-25 17:12:51 PST
To make printing not kill the main page. We can just keep deferring the flush until we get unfrozen; all of the property changes will just keep accumulating.
Attachments
patch (4.76 KB, patch)
2013-11-25 17:14 PST, Tim Horton
bfulgham: review+
Tim Horton
Comment 1 2013-11-25 17:14:58 PST
Brent Fulgham
Comment 2 2013-11-26 19:18:45 PST
Comment on attachment 217849 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=217849&action=review r=me. But please consider whether the "optimization" or "flush avoidance" I suggested makes any sense. > Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeContext.mm:145 > + if (!m_isFlushingSuspended && m_hasDeferredFlush) { Should we bother checking if our original state was already "!m_isFlushingSuspended" and only schedule the layer flush for the case where state is changing? I.e.: if (m_isFlushingSuspended == isFrozen) return; ... before doing the rest of your code?
Tim Horton
Comment 3 2013-12-02 12:55:38 PST
Note You need to log in before you can comment on or make changes to this bug.