Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeContext.h
@@ -56,6 +56,8 @@ public:
 
     LayerHostingMode layerHostingMode() const { return m_webPage->layerHostingMode(); }
 
+    void setIsFlushingSuspended(bool);
+
 private:
     // WebCore::GraphicsLayerFactory
     virtual std::unique_ptr<WebCore::GraphicsLayer> createGraphicsLayer(WebCore::GraphicsLayerClient*) OVERRIDE;
@@ -71,6 +73,9 @@ private:
 
     Vector<RemoteLayerTreeTransaction::LayerCreationProperties> m_createdLayers;
     Vector<RemoteLayerTreeTransaction::LayerID> m_destroyedLayers;
+
+    bool m_isFlushingSuspended;
+    bool m_hasDeferredFlush;
 };
 
 } // namespace WebKit
