Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeContext.mm
@@ -43,6 +43,8 @@ namespace WebKit {
 RemoteLayerTreeContext::RemoteLayerTreeContext(WebPage* webPage)
     : m_webPage(webPage)
     , m_layerFlushTimer(this, &RemoteLayerTreeContext::layerFlushTimerFired)
+    , m_isFlushingSuspended(false)
+    , m_hasDeferredFlush(false)
 {
 }
 
@@ -114,6 +116,11 @@ void RemoteLayerTreeContext::flushLayers()
     if (!m_rootLayer)
         return;
 
+    if (m_isFlushingSuspended) {
+        m_hasDeferredFlush = true;
+        return;
+    }
+
     RemoteLayerTreeTransaction transaction;
 
     transaction.setRootLayerID(m_rootLayer->layerID());
@@ -129,6 +136,19 @@ void RemoteLayerTreeContext::flushLayers()
     m_rootLayer->recursiveBuildTransaction(transaction);
 
     m_webPage->send(Messages::RemoteLayerTreeHost::Commit(transaction));
+}
+
+void RemoteLayerTreeContext::setIsFlushingSuspended(bool isFrozen)
+{
+    if (m_isFlushingSuspended == isFrozen)
+        return;
+
+    m_isFlushingSuspended = isFrozen;
+
+    if (!m_isFlushingSuspended && m_hasDeferredFlush) {
+        m_hasDeferredFlush = false;
+        scheduleLayerFlush();
+    }
 }
 
 } // namespace WebKit
